syntax = "proto3";

package user;

option go_package = "github.com/hervibest/be-yourmoments-backup/pb/user;userpb";

import "photo/photo.proto";
import "google/protobuf/timestamp.proto";


service UserService{
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc AuthenticateV2(AuthenticateRequestV2) returns (AuthenticateResponseV2);
  rpc SendBulkPhotoNotification(SendBulkPhotoNotificationRequest) returns (SendBulkPhotoNotificationResponse);
  rpc SendSinglePhotoNotification(SendSinglePhotoNotificationRequest) returns (SendSinglePhotoNotificationResponse);
  rpc SendBulkNotification(SendBulkNotificationRequest) returns (SendBulkNotificationResponse);
  rpc SendSingleFacecamNotification(SendSingleFacecamNotificationRequest) returns (SendSingleFacecamNotificationResponse);
}
// google.protobuf.Timestamp
message AuthenticateRequest{
  string token = 1;
}

message AuthenticateResponse{
  int64 status = 1; 
  string error = 2;
  User user = 3;
}


/**
Authenticate V2 (Improved JWT )
**/
message AuthenticateRequestV2{
  string token = 1;
  string user_id = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message AuthenticateResponseV2{
  int64 status = 1; 
  string error = 2;
  User user = 3;
}


message User {
  string 	user_id = 1;
  string 	username = 2;
  string 	email = 3;
  string 	phone_number = 4;
  uint32 	similarity = 5;
  string  creator_id = 6;
  string  wallet_id = 7;
}

//COUNT USER IN PHOTO SVC

message SendBulkNotificationRequest {
  map<string, int32> count_map = 1;
}

message SendBulkNotificationResponse {
  int64 status = 1;
  string error = 2;
}

message SendBulkPhotoNotificationRequest {
  repeated photo.BulkUserSimilarPhoto bulk_user_similar_photo = 1;
}

message SendBulkPhotoNotificationResponse {
  int64 status = 1;
  string error = 2;
}

message SendSinglePhotoNotificationRequest {
  repeated photo.UserSimilarPhoto user_similar_photo = 1;
}

message SendSinglePhotoNotificationResponse {
  int64 status = 1;
  string error = 2;
}

message SendSingleFacecamNotificationRequest {
  repeated photo.UserSimilarPhoto user_similar_photo = 1;
}

message SendSingleFacecamNotificationResponse {
  int64 status = 1;
  string error = 2;
}